# sgeroids

./: CMakeLists.txt  protocol_german  version.hpp.in
doc/: CMakeLists.txt  Doxyfile.in  header.html  layout.xml  stylesheet.css
doc/files/: main.doxygen
include/sgeroids/: app_name.hpp  clock.hpp  dim2.hpp  exception.hpp  log.hpp  log_context.hpp  log_location.hpp  log_parameters.hpp  machine.hpp  main.hpp  media_path.hpp  program_version.hpp  random_generator.hpp  random_generator_fwd.hpp  random_generator_seed.hpp  rect.hpp  scoped_frame_limiter.hpp  systems.hpp  systems_fwd.hpp  timer.hpp  timer_parameters.hpp  utf8_file_to_fcppt_string.hpp  vector2.hpp  version.hpp
include/sgeroids/input/: keyboard.hpp  keyboard_fwd.hpp  log.hpp  manager.hpp  optional_entity_id.hpp
include/sgeroids/math/: degrees.hpp  discrete_cos.hpp  discrete_sin.hpp  lookup_table.hpp  positive_mod.hpp  unit_magnitude.hpp  wrap_point_in_torus.hpp
include/sgeroids/model/: asteroid_id.hpp  base.hpp  base_fwd.hpp  dim2.hpp  entity_id.hpp  error_code.hpp  error_code_fwd.hpp  error_function.hpp  firing_mode.hpp  firing_mode_fwd.hpp  log.hpp  play_area.hpp  player_name.hpp  position.hpp  projectile_id.hpp  radius.hpp  rect.hpp  rotation.hpp  rotation_direction.hpp  score.hpp  spaceship_id.hpp  thrust.hpp  unique_base_ptr.hpp  vector2.hpp  velocity.hpp
include/sgeroids/model/callbacks/: add_asteroid.hpp  add_asteroid_function.hpp  add_projectile.hpp  add_projectile_function.hpp  add_spaceship.hpp  add_spaceship_function.hpp  change_thrust.hpp  change_thrust_function.hpp  collide_projectile_asteroid.hpp  collide_projectile_asteroid_function.hpp  destroy_asteroid.hpp  destroy_asteroid_function.hpp  error.hpp  error_function.hpp  gameover.hpp  gameover_function.hpp  position_entity.hpp  position_entity_function.hpp  remove_entity.hpp  remove_entity_function.hpp  remove_spaceship.hpp  remove_spaceship_function.hpp  rotation_entity.hpp  rotation_entity_function.hpp  score_change.hpp  score_change_function.hpp
include/sgeroids/model/local/: error_context.hpp  object.hpp
include/sgeroids/model/local/asteroid_generator/: object.hpp  object_fwd.hpp  play_area_side.hpp  play_area_side_fwd.hpp
include/sgeroids/model/local/callbacks/: asteroid_died.hpp  asteroid_died_function.hpp  asteroid_generation.hpp  asteroid_generation_function.hpp  increase_score.hpp  increase_score_function.hpp  insert_projectile.hpp  insert_projectile_function.hpp  position_entity_no_id.hpp  position_entity_no_id_function.hpp  rotation_entity_no_id.hpp  rotation_entity_no_id_function.hpp
include/sgeroids/model/local/entity/: asteroid.hpp  asteroid_fwd.hpp  base.hpp  base_fwd.hpp  projectile.hpp  spaceship.hpp  spaceship_fwd.hpp  unique_base_ptr.hpp
include/sgeroids/model/serialization/: context.hpp  deserializer.hpp  deserializer_fwd.hpp  global_context.hpp
include/sgeroids/model/serialization/message/: add_player.hpp  all_messages.hpp  base.hpp  base_unique_ptr.hpp  change_firing_mode.hpp  change_thrust.hpp  remove_player.hpp  rng_seed.hpp  rotation_direction.hpp  update.hpp
include/sgeroids/replay/: call_object.hpp  dispatcher.hpp  dispatcher_fwd.hpp  file_reader.hpp  file_reader_fwd.hpp  object.hpp  object_fwd.hpp
include/sgeroids/resource_tree/: base_path.hpp  element.hpp  element_decl.hpp  element_fwd.hpp  element_impl.hpp  instantiate_object.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_impl.hpp  path.hpp  path_to_resource_function.hpp  path_with_resource.hpp  path_with_resource_decl.hpp  path_with_resource_fwd.hpp  path_with_resource_impl.hpp  strip_file_extension.hpp  strip_path_prefix.hpp  sub_path.hpp
include/sgeroids/state_machine/: object.hpp
include/sgeroids/state_machine/events/: render.hpp  tick.hpp
include/sgeroids/state_machine/states/ingame/: superstate.hpp  superstate_fwd.hpp
include/sgeroids/states/ingame/: superstate.hpp
include/sgeroids/view/: base.hpp  base_fwd.hpp  log.hpp  unique_base_ptr.hpp
include/sgeroids/view/planar/: audio_buffer_tree.hpp  audio_buffer_tree_fwd.hpp  error_context.hpp  object.hpp  player_name.hpp  position.hpp  radius.hpp  radius_to_screen_space.hpp  rotation.hpp  rotation_to_screen_space.hpp  sprite_size_from_texture_and_radius.hpp  texture_tree.hpp  texture_tree_fwd.hpp  vector2.hpp
include/sgeroids/view/planar/background/: object.hpp  star_count.hpp  star_size.hpp
include/sgeroids/view/planar/callbacks/: add_particle.hpp  add_particle_function.hpp
include/sgeroids/view/planar/entity/: asteroid.hpp  base.hpp  base_fwd.hpp  bullet.hpp  spaceship.hpp
include/sgeroids/view/planar/particle/: lifespan.hpp  object.hpp  velocity.hpp
include/sgeroids/view/planar/sprite/: choices.hpp  color_format.hpp  dim.hpp  dynamic_buffers.hpp  object.hpp  order.hpp  ordered_collection.hpp  parameters.hpp  static_buffers.hpp  static_range.hpp  system.hpp  system_impl.hpp  type_choices.hpp
media/: LICENSE  config.json
src/sgeroids/: app_name.cpp  exception.cpp  log.cpp  log_context.cpp  log_location.cpp  log_parameters.cpp  main.cpp  media_path.cpp  program_version.cpp  random_generator_seed.cpp  scoped_frame_limiter.cpp  utf8_file_to_fcppt_string.cpp  version.cpp
src/sgeroids/input/: keyboard.cpp  log.cpp  manager.cpp
src/sgeroids/math/: discrete_cos.cpp  discrete_sin.cpp  unit_magnitude.cpp
src/sgeroids/model/: base.cpp  log.cpp
src/sgeroids/model/local/: object.cpp
src/sgeroids/model/local/asteroid_generator/: object.cpp
src/sgeroids/model/local/entity/: asteroid.cpp  base.cpp  spaceship.cpp  (+1 more)
src/sgeroids/model/serialization/: global_context.cpp
src/sgeroids/replay/: dispatcher.cpp  file_reader.cpp  object.cpp
src/sgeroids/resource_tree/: path.cpp  strip_file_extension.cpp  strip_path_prefix.cpp
src/sgeroids/state_machine/: object.cpp
src/sgeroids/state_machine/events/: render.cpp
src/sgeroids/view/: base.cpp  log.cpp
src/sgeroids/view/planar/: audio_buffer_tree.cpp  object.cpp  radius_to_screen_space.cpp  rotation_to_screen_space.cpp  sprite_size_from_texture_and_radius.cpp  texture_tree.cpp
util/: prettify_includes.sh  update_cmake.sh
(+37 files in other folders)
